--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,13 @@
 <resources>
-    <string name="app_name">Project0</string>
+    <string name="app_name">My App Portfolio</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="my_nanodegree_apps">My Nanodegree Apps</string>
     <string name="spotify_streamer">Spotify Streamer</string>
     <string name="scores_app">Scores App</string>
+    <string name="library_app">Library App</string>
+    <string name="build_it_bigger">Build It Bigger</string>
+    <string name="bacon_reader">Bacon Reader</string>
+    <string name="capstone">Capstone: My Own App</string>
 </resources>
